[package]
name = "lmvc8-core"
version = "0.1.0"
edition = "2024"

[features]
default = []
compiler = []
debugger = []
disassembler = []
emulator = []

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
rpath = true

[dependencies]
binrw = { workspace = true }
thiserror = { workspace = true }