[package]
name = "lmvc8-core"
version = "0.1.0"
edition = "2024"

[features]
default = []
compiler = []
debugger = []
disassembler = []
emulator = []

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
rpath = true

[dependencies]
binrw = { workspace = true }
bitflags = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
rstest = "0.26.1"

[[bin]]
name = "benchmark"
path = "bin/benchmark.rs"
required-features = ["emulator"]